More blur added, container no longer blurred.

--- a/ÅAHappenings/client/src/styles/profile.css
+++ b/ÅAHappenings/client/src/styles/profile.css
@@ -5,7 +5,7 @@
     justify-content: center;
     gap: 20px;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 1);
     border-radius: 10px;
     width: 450px;
   }
